<resources>
    <string name="app_name">Melody Tiles High Night</string>

    <string name="title">High Night Melody Tiles</string>
    <string name="Level">Level</string>
    <string name="score">Score</string>
    <string name="time">Time</string>
    <string name="Lives">Lives</string>
    <string name="credits_song">Credits</string>
    <string name="instructions">Press the Tiles in the correct order to find the right melody.</string>
    <string name="credits">Game created by HighScoreC. </string>
    <string name="premium">Tap here to remove ads, get more levels and unlimited lives</string>
    <string name="premiumTitle">Get Premium Access Forever</string>
    <string name="premiumBenefitl">No more Ads</string>
    <string name="premiumBenefit2">Unlimited lives</string>
    <string name="premiumBenefit3">Keep your reached level</string>
    <string name="pay">PAY ONLY 1$</string>
    <string name="you_win">¡You Win!</string>
    <string name="song_levels">🧩 Levels: %1$d / %2$d</string>
    <string name="song_score">🎯 Score: %1$d</string>
    <string name="locked_message">Blockhead - Complete the previous song to unlock</string>


    <string name="tutorial_hint">
    💡 Use the play button to hear how the song should sound – but you can only use it 3 times!
</string>

    <string name="tutorial_instructions">
    👆 Discover the correct order of the notes!\n\n
    Each square contains a fragment of the song. Tap them in the right sequence to play the full melody and solve the puzzle.
</string>

    <string name="share_message">🎵 I scored %1$d points in Melody Tiles! Can you beat me?</string>
    <string name="share_title">Share with…</string>

    <string name="new_high_score">🎉 New High Score!</string>
    <string name="final_score_text">Score: %1$d\nHigh Score: %2$d</string>
    <string name="you_win_message">You Win!</string>
    <string name="game_over">Game Over</string>
    <string name="limit_reached">Limit reached</string>
    <string name="score_0">Score: 0</string>

    <string name="share_score">Share Score</string>
    <string name="try_again">Try Again</string>
    <string name="return_to_menu">Return to Menu</string>
    <string name="play">PLAY</string>
    <string name="unknown_credits" />

    <string name="unlock_message">Unlock this song by completing previous levels!</string>


    <string name="tutorial_hint_2">
    🔓 New Mechanics Unlocked!
</string>

    <string name="tutorial_description_2">
    🧠 Every  level up, new sounds will unlock!\nYou\'ll see a green flash and must replay the updated melody sequence.
</string>

    <string name="tutorial_continue_button">
    Next!
</string>
    <string name="cr_ditos_de_la_canci_n">🎵 Song Credits</string>

    <!-- res/values/strings.xml -->
    <string name="admob_banner_id">ca-app-pub-5783562368200006/3893196284</string>



</resources>